#8580 Scrollbar issue. Fixes #8580

--- a/packages/survey-core/src/default-theme/blocks/sv-scroll.scss
+++ b/packages/survey-core/src/default-theme/blocks/sv-scroll.scss
@@ -2,9 +2,7 @@
 
 .sv-scroll__wrapper {
   position: relative;
-  flex-grow: 1;
-  flex-shrink: 1;
-  height: 0;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
